Fix ArrayField's `__len` when value is 0.
This commit updates `ArrayField` to make queries checking its `len`
to work, even if the value is 0.

This was broken in previous releases because PostgreSQL sends back a NULL
value for the length of empty arrays.

--- a/docs/releases/1.4.rst
+++ b/docs/releases/1.4.rst
@@ -23,6 +23,14 @@ Features
   ``auto_add`` (sending ``True`` still works). If specified, this callable
   will be used to generate new UUIDs.  Any callable that takes no arguments
   and reliably returns a UUID is acceptable.
+
+
+Minor Releases
+--------------
+
 * As of 1.4.2, django-pgfields ships with a ``DateTimeField`` subclass
   that accepts UNIX timestamps as values (and otherwise behaves exactly
   like its parent, the stock Django class).
+* As of 1.4.3, sending a query to an ``ArrayField`` with a ``__len`` and
+  value of `0` works. This was broken in prior releases because it requires
+  special query handling in PostgreSQL (which expects a ``NULL`` value).
